kube-yaml-istio/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-restapp-service-clusterip
spec:
  selector:
    app: sample-restapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
