kube-yaml-istio/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-restapp-route
spec:
  hosts:
  - sample-restapp.dmilangcp.xyz
  http:
  - name: "reviews-v1-route"
    route:
    - destination:
        host: sample-restapp-service-clusterip
        port: 
          number: 80
